src/gr/uoi/cs/daintiness/hecate/parser/DDLParser.java
// Generated from /home/iskoulis/Dev/Hecate/src/gr/uoi/cs/daintiness/hecate/parser/DDL.g4 by ANTLR 4.0
package gr.uoi.cs.daintiness.hecate.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DDLParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		STRING_G=1, STRING_Q=2, STRING_D=3, WS=4, COMMENT=5, LINE_COMMENT=6, EQ=7, 
		LP=8, RP=9, SQ=10, CO=11, QO=12, US=13, AT=14, DA=15, HA=16, SL=17, ST=18, 
		DQ=19, GR=20, CL=21, DO=22, SP=23, CA=24, VB=25, PL=26, CONFLICT_START=27, 
		CONFLICT_END=28, CONFLICT=29, ACTION=30, ADD=31, ALTER=32, AS=33, ASC=34, 
		AUTO_INC=35, BIGINT=36, BINARY=37, BIT=38, BTREE=39, CASCADE=40, CHARACTER=41, 
		CHAR=42, CHECK=43, COLLATE=44, COL_FORMAT=45, COMMIT=46, CONSTRAINT=47, 
		CREATE=48, DATABASE=49, DECIMAL=50, DEFAULT=51, DEFERRABLE=52, DELETE=53, 
		DESC=54, DISK=55, DOUBLE=56, DROP=57, DYNAMIC=58, END=59, ENUM=60, EXISTS=61, 
		FIXED=62, FOREIGN=63, FULLTEXT=64, FUNCTION=65, HASH=66, IF=67, IGNORE=68, 
		INDEX=69, INSERT=70, INTEGER=71, INTO=72, IS=73, KEY=74, KEY_BSIZE=75, 
		MEMORY=76, NO=77, NOT=78, NULL=79, NUMERIC=80, ON=81, OR=82, PRECISION=83, 
		PROCEDURE=84, PRIMARY=85, PURGE=86, REAL=87, REFERENCES=88, REPLACE=89, 
		RESTRICT=90, SCHEMA=91, SET=92, SIGNED=93, SMALLINT=94, SPATIAL=95, STORAGE=96, 
		TABLE=97, TEMPORARY=98, TRIGGER=99, UNIQUE=100, UNSIGNED=101, UPDATE=102, 
		USE=103, USING=104, VALUES=105, VARBINARY=106, VARCHAR=107, VIEW=108, 
		WHERE=109, YEAR=110, ZEROFILL=111, INT=112, ID=113, OTHER=114;
	public static final String[] tokenNames = {
		"<INVALID>", "STRING_G", "STRING_Q", "STRING_D", "WS", "COMMENT", "LINE_COMMENT", 
		"'='", "'('", "')'", "';'", "','", "'''", "'_'", "'@'", "'-'", "'#'", 
		"'/'", "'*'", "'\"'", "'`'", "':'", "'.'", "' '", "'$'", "'|'", "'+'", 
		"'<<<<<<<'", "'>>>>>>>'", "CONFLICT", "ACTION", "ADD", "ALTER", "AS", 
		"ASC", "AUTO_INC", "BIGINT", "BINARY", "BIT", "BTREE", "CASCADE", "CHARACTER", 
		"CHAR", "CHECK", "COLLATE", "COL_FORMAT", "COMMIT", "CONSTRAINT", "CREATE", 
		"DATABASE", "DECIMAL", "DEFAULT", "DEFERRABLE", "DELETE", "DESC", "DISK", 
		"DOUBLE", "DROP", "DYNAMIC", "END", "ENUM", "EXISTS", "FIXED", "FOREIGN", 
		"FULLTEXT", "FUNCTION", "HASH", "IF", "IGNORE", "INDEX", "INSERT", "INTEGER", 
		"INTO", "IS", "KEY", "KEY_BSIZE", "MEMORY", "NO", "NOT", "NULL", "NUMERIC", 
		"ON", "OR", "PRECISION", "PROCEDURE", "PRIMARY", "PURGE", "REAL", "REFERENCES", 
		"REPLACE", "RESTRICT", "SCHEMA", "SET", "SIGNED", "SMALLINT", "SPATIAL", 
		"STORAGE", "TABLE", "TEMPORARY", "TRIGGER", "UNIQUE", "UNSIGNED", "UPDATE", 
		"USE", "USING", "VALUES", "VARBINARY", "VARCHAR", "VIEW", "WHERE", "YEAR", 
		"ZEROFILL", "INT", "ID", "OTHER"
	};
	public static final int
		RULE_start = 0, RULE_sql_statement = 1, RULE_ddl_statement = 2, RULE_other_statement = 3, 
		RULE_namespace = 4, RULE_commit = 5, RULE_drop_statement = 6, RULE_insert_statement = 7, 
		RULE_create_statement = 8, RULE_alter_statement = 9, RULE_update_statement = 10, 
		RULE_database = 11, RULE_create_option = 12, RULE_index = 13, RULE_index_type = 14, 
		RULE_index_option = 15, RULE_view = 16, RULE_triger = 17, RULE_pl_sql = 18, 
		RULE_consume_until_end = 19, RULE_table = 20, RULE_table_definition = 21, 
		RULE_table_option = 22, RULE_column = 23, RULE_column_option = 24, RULE_table_constraint = 25, 
		RULE_line_constraint = 26, RULE_alter_constraint = 27, RULE_constraint = 28, 
		RULE_consume_par = 29, RULE_reference_definition = 30, RULE_reference_option = 31, 
		RULE_refs = 32, RULE_data_type = 33, RULE_data_option = 34, RULE_schema_name = 35, 
		RULE_table_name = 36, RULE_col_name = 37, RULE_index_name = 38, RULE_charset_name = 39, 
		RULE_collation_name = 40, RULE_constr_name = 41, RULE_triger_name = 42, 
		RULE_nameList = 43, RULE_parNameList = 44, RULE_valueList = 45, RULE_parValueList = 46, 
		RULE_valuesList = 47, RULE_size = 48, RULE_order = 49, RULE_value = 50, 
		RULE_ident = 51, RULE_number = 52, RULE_quote = 53, RULE_quoted_rest = 54, 
		RULE_string = 55, RULE_function = 56, RULE_special_char = 57, RULE_restricted = 58;
	public static final String[] ruleNames = {
		"start", "sql_statement", "ddl_statement", "other_statement", "namespace", 
		"commit", "drop_statement", "insert_statement", "create_statement", "alter_statement", 
		"update_statement", "database", "create_option", "index", "index_type", 
		"index_option", "view", "triger", "pl_sql", "consume_until_end", "table", 
		"table_definition", "table_option", "column", "column_option", "table_constraint", 
		"line_constraint", "alter_constraint", "constraint", "consume_par", "reference_definition", 
		"reference_option", "refs", "data_type", "data_option", "schema_name", 
		"table_name", "col_name", "index_name", "charset_name", "collation_name", 
		"constr_name", "triger_name", "nameList", "parNameList", "valueList", 
		"parValueList", "valuesList", "size", "order", "value", "ident", "number", 
		"quote", "quoted_rest", "string", "function", "special_char", "restricted"
	};

	@Override
	public String getGrammarFileName() { return "DDL.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public DDLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StartContext extends ParserRuleContext {
		public TerminalNode SQ(int i) {
			return getToken(DDLParser.SQ, i);
		}
		public TerminalNode EOF() { return getToken(DDLParser.EOF, 0); }
		public List<Sql_statementContext> sql_statement() {
			return getRuleContexts(Sql_statementContext.class);
		}
		public Sql_statementContext sql_statement(int i) {
			return getRuleContext(Sql_statementContext.class,i);
		}
		public List<TerminalNode> SQ() { return getTokens(DDLParser.SQ); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DDLListener ) ((DDLListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DDLListener ) ((DDLListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(118); sql_statement();
				setState(120);
				_la = _input.LA(1);
				if (_la==SQ) {
					{
					setState(119); match(SQ);
					}
				}

				}
				}
				setState(124); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ALTER) | (1L << COMMIT) | (1L << CREATE) | (1L << DROP))) != 0) || ((((_la - 70)) & ~0x3f) == 0 && ((1L << (_la - 70)) & ((1L << (INSERT - 70)) | (1L << (UPDATE - 70)) | (1L << (USE - 70)))) != 0) );
			setState(126); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Sql_statementContext extends ParserRuleContext {
		public Ddl_statementContext ddl_statement() {
			return getRuleContext(Ddl_statementContext.class,0);
		}
		public Other_statementContext other_statement() {
			return getRuleContext(Other_statementContext.class,0);
		}
		public Sql_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sql_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DDLListener ) ((DDLListener)listener).enterSql_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DDLListener ) ((DDLListener)listener).exitSql_statement(this);
		}
	}

	public final Sql_statementContext sql_statement() throws RecognitionException {
		Sql_statementContext _localctx = new Sql_statementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sql_statement);
		try {
			setState(130);
			switch (_input.LA(1)) {
			case ALTER:
			case CREATE:
			case DROP:
			case UPDATE:
				enterOuterAlt(_localctx, 1);
				{
				setState(128); ddl_statement();
				}
				break;
			case COMMIT:
			case INSERT:
			case USE:
				enterOuterAlt(_localctx, 2);
				{
				setState(129); other_statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Ddl_statementContext extends ParserRuleContext {
		public Drop_statementContext drop_statement() {
			return getRuleContext(Drop_statementContext.class,0);
		}
		public Alter_statementContext alter_statement() {
			return getRuleContext(Alter_statementContext.class,0);
		}
		public Update_statementContext update_statement() {
			return getRuleContext(Update_statementContext.class,0);
		}
		public Create_statementContext create_statement() {
			return getRuleContext(Create_statementContext.class,0);
		}
		public Ddl_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ddl_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DDLListener ) ((DDLListener)listener).enterDdl_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DDLListener ) ((DDLListener)listener).exitDdl_statement(this);
		}
	}

	public final Ddl_statementContext ddl_statement() throws RecognitionException {
		Ddl_statementContext _localctx = new Ddl_statementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_ddl_statement);
		try {
			setState(136);
			switch (_input.LA(1)) {
			case DROP:
				enterOuterAlt(_localctx, 1);
				{
				setState(132); drop_statement();
				}
				break;
			case CREATE:
				enterOuterAlt(_localctx, 2);
				{
				setState(133); create_statement();
				}
				break;
			case ALTER:
				enterOuterAlt(_localctx, 3);
				{
				setState(134); alter_statement();
				}
				break;
			case UPDATE:
				enterOuterAlt(_localctx, 4);
				{
				setState(135); update_statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Other_statementContext extends ParserRuleContext {
		public CommitContext commit() {
			return getRuleContext(CommitContext.class,0);
		}
		public Insert_statementContext insert_statement() {
			return getRuleContext(Insert_statementContext.class,0);
		}
		public NamespaceContext namespace() {
			return getRuleContext(NamespaceContext.class,0);
		}
		public Other_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_other_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DDLListener ) ((DDLListener)listener).enterOther_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DDLListener ) ((DDLListener)listener).exitOther_statement(this);
		}
	}

	public final Other_statementContext other_statement() throws RecognitionException {
		Other_statementContext _localctx = new Other_statementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_other_statement);
		try {
			setState(141);
			switch (_input.LA(1)) {
			case INSERT:
				enterOuterAlt(_localctx, 1);
				{
				setState(138); insert_statement();
				}
				break;
			case USE:
				enterOuterAlt(_localctx, 2);
				{
				setState(139); namespace();
				}
				break;
			case COMMIT:
				enterOuterAlt(_localctx, 3);
				{
				setState(140); commit();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NamespaceContext extends ParserRuleContext {
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public TerminalNode USE() { return getToken(DDLParser.USE, 0); }
		public NamespaceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_namespace; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DDLListener ) ((DDLListener)listener).enterNamespace(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DDLListener ) ((DDLListener)listener).exitNamespace(this);
		}
	}

	public final NamespaceContext namespace() throws RecognitionException {
		NamespaceContext _localctx = new NamespaceContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_namespace);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143); match(USE);
			setState(144); ident();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommitContext extends ParserRuleContext {
		public TerminalNode COMMIT() { return getToken(DDLParser.COMMIT, 0); }
		public CommitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_commit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DDLListener ) ((DDLListener)listener).enterCommit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DDLListener ) ((DDLListener)listener).exitCommit(this);
		}
	}

	public final CommitContext commit() throws RecognitionException {
		CommitContext _localctx = new CommitContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_commit);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146); match(COMMIT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Drop_statementContext extends ParserRuleContext {
		public TerminalNode TABLE() { return getToken(DDLParser.TABLE, 0); }
		public TerminalNode PURGE() { return getToken(DDLParser.PURGE, 0); }
		public TerminalNode DATABASE() { return getToken(DDLParser.DATABASE, 0); }
		public TerminalNode EXISTS() { return getToken(DDLParser.EXISTS, 0); }
		public TerminalNode DROP() { return getToken(DDLParser.DROP, 0); }
		public NameListContext nameList() {
			return getRuleContext(NameListContext.class,0);
		}
		public TerminalNode IF() { return getToken(DDLParser.IF, 0); }
		public Drop_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_drop_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DDLListener ) ((DDLListener)listener).enterDrop_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DDLListener ) ((DDLListener)listener).exitDrop_statement(this);
		}
	}

	public final Drop_statementContext drop_statement() throws RecognitionException {
		Drop_statementContext _localctx = new Drop_statementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_drop_statement);
		int _la;
		try {
			setState(166);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(148); match(DROP);
				setState(149);
				_la = _input.LA(1);
				if ( !(_la==DATABASE || _la==TABLE) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(150); match(IF);
				setState(151); match(EXISTS);
				setState(152); nameList();
				setState(154);
				_la = _input.LA(1);
				if (_la==PURGE) {
					{
					setState(153); match(PURGE);
					}
				}

				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(156); match(DROP);
				setState(157);
				_la = _input.LA(1);
				if ( !(_la==DATABASE || _la==TABLE) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(158); nameList();
				setState(160);
				_la = _input.LA(1);
				if (_la==PURGE) {
					{
					setState(159); match(PURGE);
					}
				}

				setState(164);
				_la = _input.LA(1);
				if (_la==IF) {
					{
					setState(162); match(IF);
					setState(163); match(EXISTS);
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Insert_statementContext extends ParserRuleContext {
		public List<ParValueListContext> parValueList() {
			return getRuleContexts(ParValueListContext.class);
		}
		public TerminalNode CO(int i) {
			return getToken(DDLParser.CO, i);
		}
		public ParNameListContext parNameList() {
			return getRuleContext(ParNameListContext.class,0);
		}
		public TerminalNode INSERT() { return getToken(DDLParser.INSERT, 0); }
		public TerminalNode IGNORE() { return getToken(DDLParser.IGNORE, 0); }
		public Table_nameContext table_name() {
			return getRuleContext(Table_nameContext.class,0);
		}
		public List<TerminalNode> CO() { return getTokens(DDLParser.CO); }
		public TerminalNode INTO() { return getToken(DDLParser.INTO, 0); }
		public ParValueListContext parValueList(int i) {
			return getRuleContext(ParValueListContext.class,i);
		}
		public TerminalNode VALUES() { return getToken(DDLParser.VALUES, 0); }
		public Insert_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_insert_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DDLListener ) ((DDLListener)listener).enterInsert_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DDLListener ) ((DDLListener)listener).exitInsert_statement(this);
		}
	}

	public final Insert_statementContext insert_statement() throws RecognitionException {
		Insert_statementContext _localctx = new Insert_statementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_insert_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168); match(INSERT);
			setState(170);
			_la = _input.LA(1);
			if (_la==IGNORE) {
				{
				setState(169); match(IGNORE);
				}
			}

			setState(172); match(INTO);
			setState(173); table_name();
			setState(175);
			_la = _input.LA(1);
			if (_la==LP) {
				{
				setState(174); parNameList();
				}
			}

			setState(177); match(VALUES);
			setState(178); parValueList();
			setState(183);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CO) {
				{
				{
				setState(179); match(CO);
				setState(180); parValueList();
				}
				}
				setState(185);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Create_statementContext extends ParserRuleContext {
		public IndexContext index() {
			return getRuleContext(IndexContext.class,0);
		}
		public TerminalNode CREATE() { return getToken(DDLParser.CREATE, 0); }
		public ViewContext view() {
			return getRuleContext(ViewContext.class,0);
		}
		public TableContext table() {
			return getRuleContext(TableContext.class,0);
		}
		public Pl_sqlContext pl_sql() {
			return getRuleContext(Pl_sqlContext.class,0);
		}
		public DatabaseContext database() {
			return getRuleContext(DatabaseContext.class,0);
		}
		public TrigerContext triger() {
			return getRuleContext(TrigerContext.class,0);
		}
		public Create_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_create_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DDLListener ) ((DDLListener)listener).enterCreate_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DDLListener ) ((DDLListener)listener).exitCreate_statement(this);
		}
	}
